yapay zeka kısmı düzeltildi

--- a/SporSalonuYonetim.Web/SporSalonuYonetim.Web.csproj
+++ b/SporSalonuYonetim.Web/SporSalonuYonetim.Web.csproj
@@ -13,8 +13,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+
+    <PackageReference Include="Mscc.GenerativeAI" Version="1.5.1" />
+    
   </ItemGroup>
 
 </Project>
