--- a/SporSalonuYonetim.Web/appsettings.json
+++ b/SporSalonuYonetim.Web/appsettings.json
@@ -1,12 +1,15 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=SporSalonuDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=SporSalonuDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+  "Gemini": {
+    "ApiKey": "AIzaSyDniaRu4EFQvOH-8500jKtihduk1RDp2gc"
+  }
 }
